# gstreamer-oci

./: .gitignore  Dockerfile  LICENSE  justfile  readme.md
.github/workflows/: manual-release.yml
build-utils/gst-python-binding/: pyproject.toml
example_gst_plugin/: example.py  py_rgb_square_with_property.py  py_with_property.py
scripts/: local-release.sh
