[project]
name = "gst-python-binding"
version = "0.0.0"
description = "gst-python binding"
requires-python = ">=3.12"
dependencies = ["PyGObject>=3.50.0", "typing-extensions>=4.15.0"]
authors = [
  {name = "Gstreamer Project" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gi"]